# bactscout

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CITATIONS.md  CONTRIBUTING.md  COVERAGE.md  FASTP_QC_COVERAGE_ANALYSIS.md  IMPLEMENTATION_SUMMARY_ISSUE_6.md  KAT_INTEGRATION_PHASE2_SUMMARY.md  LONGREAD_VALIDATION_REPORT.md  NEXTFLOW.md  README.md  SESSION_SUMMARY.md  TIER12_IMPLEMENTATION_SUMMARY.md  USAGE.md  ariba_species.txt  bactscout.py  bactscout_config.yml  bactscout_long_config.yml  build_docker.sh  environment.yml  get_test_data.sh  main.nf  mkdocs.yml  nextflow.config  nextflow.nf  nextflow_schema.json  pixi.toml  pyproject.toml  pytest.ini  run_pipeline.sh  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  docker-build.yml
bactscout/: __init__.py  __version__.py  collect.py  genome_download.py  main.py  preflight.py  resource_monitor.py  summary.py  thread.py  util.py
conda/: meta.yaml
conf/: modules.config  multiqc_config.yml  test.config  test_full.config
docker/: Dockerfile
docs/: README.md  contributing.md  index.md  output.md  qc_kat.md  usage.md
joss/: PACKAGE_OVERVIEW.md  PRE_SUBMISSION_CHECKLIST.md  README.md  SUBMISSION_SUMMARY.md  paper.bib  paper.md
lib/: Utils.groovy
nextflow_example/: nextflow.config
output_test/: final_summary.csv
test/: generate_test_data.py  test_pipeline.sh
tests/: __init__.py  conftest.py  test_bactscout_cli.py  test_faspt_handling.py  test_fastp_collect_summary.py  test_fastp_qc_metrics.py  test_file_pairs.py  test_genome_download.py  test_genome_size_handling.py  test_long_main.py  (+20 more)
(+186 files in other folders)
